--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
         <p>
             <button onclick="window.location.href='gemini/image/index.html'">Text to Image Generator</button>
         </p>
+        <p>
+            <button onclick="window.location.href='gemini/video/analyzer/index.html'">Video Analyzer</button>
+        </p>
     </div>
 </body>
 </html>
