vedio generation feature

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
         <p>
             <button onclick="window.location.href='gemini/video/analyzer/index.html'">Video Analyzer</button>
         </p>
+        <p>
+            <button onclick="window.location.href='gemini/video/generation/index.html'">Video Generator</button>
+        </p>
     </div>
 </body>
 </html>
