feat: Centralize Gemini model pricing into price.js
This commit centralizes all Gemini model pricing information into a new file,
, to improve maintainability and ensure consistent pricing
across all AI web UI modules.

Key changes include:
- Creation of  containing  with pricing
  details for text, video generation (Veo), and image generation models,
  including tiered pricing logic where applicable.
- All  files across the  subdirectories were updated to
  include a script tag referencing .
- All JavaScript files that previously contained local pricing definitions
  (, , ,
  , , )
  were refactored to remove these local definitions and instead import and
  utilize  from  for cost calculations.

--- a/gemini/chatbot/index.html
+++ b/gemini/chatbot/index.html
@@ -123,6 +123,7 @@
          </div>
     </div>
 
+    <script src="../price.js"></script>
     <script src="chatbot.js" defer></script>
 </body>
 </html>
