--- a/gemini/chatbot/multi_party_chat/index.html
+++ b/gemini/chatbot/multi_party_chat/index.html
@@ -141,6 +141,7 @@
          <div id="costStats" class="token-stats"></div>
     </div>
 
+    <script src="../../price.js"></script>
     <script src="chatbot.js" defer></script>
 </body>
 </html>
