--- a/gemini/video/generation/index.html
+++ b/gemini/video/generation/index.html
@@ -69,6 +69,7 @@
             
     </div>
 
+    <script src="../../price.js"></script>
     <script src="video_gen.js"></script>
 </body>
 </html>
