feat: Implement "Recover Last" functionality for video and batch image generation
This commit introduces a "Recover Last" button to the video generation and
batch image generation UIs. This feature allows users to resume polling for
a previously initiated long-running operation if the page is refreshed or
the polling process is otherwise interrupted.

Key changes:
- For video generation ():
    - Added a  element to .
    - Modified  to:
        - Save the  to  upon initiating a video generation.
        - Check for a saved  in  during  and display the  if found.
        - Implement the  function, which re-initiates polling for the saved operation and displays the results.
        - Add an event listener for the .
- For batch image generation ():
    - Added a  element to .
    - Modified  to:
        - Save the  to  upon initiating a batch image generation.
        - Check for a saved  in  during  and display the  if found.
        - Implement the  function, which re-initiates polling for the saved batch job and processes/displays the generated images.
        - Add an event listener for the .

--- a/gemini/image/index.html
+++ b/gemini/image/index.html
@@ -79,6 +79,7 @@
                 <div class="generation-buttons">
                     <button id="generateImageButton">Generate Images</button>
                     <button id="stopGenerationButton" style="display: none;">Stop Generation</button>
+                    <button id="recoverBatchButton" style="display: none;" class="secondary-button">Recover Last Batch</button>
                 </div>
                 <button id="showApiCallsButton" style="display:none;">Show API Calls</button>
             </div>
