--- a/gemini/video/generation/index.html
+++ b/gemini/video/generation/index.html
@@ -36,6 +36,7 @@
                 <div class="generation-buttons">
                     <button id="generateButton">Generate Video</button>
                     <button id="stopGenerationButton" style="display: none;">Stop</button>
+                    <button id="recoverVideoButton" style="display: none;" class="secondary-button">Recover Last Video</button>
                 </div>
                 <button id="showApiCallsButton" style="display:none;">Show API Calls</button>
             </div>
