--- a/gemini/video/generation/index.html
+++ b/gemini/video/generation/index.html
@@ -33,6 +33,12 @@
             <div class="prompt-container">
                 <label for="promptInput">Prompt:</label>
                 <textarea id="promptInput" rows="3" placeholder="Enter your prompt here (e.g., 'A cyberpunk cat walking in the rain')..."></textarea>
+                
+                <div class="image-upload-container">
+                    <label for="imageInput">Optional Image Input (for Image-to-Video):</label>
+                    <input type="file" id="imageInput" accept="image/*">
+                </div>
+
                 <div class="generation-buttons">
                     <button id="generateButton">Generate Video</button>
                     <button id="stopGenerationButton" style="display: none;">Stop</button>
