feat: Integrate image generation as input for video generation
This commit introduces a feature to generate an image within a modal and
then use that generated image as an input for video generation. This
reuses the existing image generation page and its JavaScript logic.

Key changes:
- `gemini/video/generation/index.html`:
    - Added a "Generate Input Image" button.
    - Added a hidden modal (`imageGenerationModal`) containing an iframe
      that loads `../../image/index.html`.
- `gemini/video/generation/video_gen.js`:
    - Added event listeners for the "Generate Input Image" button to open the modal.
    - Implemented a `window.addEventListener('message')` to listen for
      `imageGenerated` events from the iframe.
    - When an image is generated in the iframe, its base64 data is converted
      to a `File` object and set as the `imageInput` for video generation.
    - Added DOM element declarations for the new buttons and modal components.
- `gemini/image/text2img.js`:
    - Modified the `useInputBtn.onclick` handler to post a message to the
      parent window (`window.parent.postMessage`) if the page is running
      inside an iframe, sending the `base64Image` data.
- `gemini/video/generation/style.css`:
    - Added CSS rules for the new modal components to control their appearance
      and behavior.

--- a/gemini/video/generation/index.html
+++ b/gemini/video/generation/index.html
@@ -37,6 +37,14 @@
                 <div class="image-upload-container">
                     <label for="imageInput">Optional Image Input (for Image-to-Video):</label>
                     <input type="file" id="imageInput" accept="image/*">
+                    <button id="generateInputImageButton" class="secondary-btn">Generate Input Image</button>
+                </div>
+
+                <div id="imageGenerationModal" class="modal hidden">
+                    <div class="modal-content">
+                        <span class="close-modal">&times;</span>
+                        <iframe id="imageGenFrame" src="../../image/index.html" style="width:100%; height:600px; border:none;"></iframe>
+                    </div>
                 </div>
 
                 <div class="generation-buttons">
