feat: Add video generation parameters, update pricing, and fix model selection

--- a/gemini/video/generation/index.html
+++ b/gemini/video/generation/index.html
@@ -50,6 +50,66 @@
                     </div>
                 </div>
 
+                <!-- Collapsible Video Generation Parameters -->
+                <details style="margin: 20px 0; border: 1px solid #ccc; border-radius: 8px; overflow: hidden;">
+                    <summary style="cursor: pointer; padding: 15px; background-color: #f8f9fa; font-weight: bold; user-select: none;">
+                        Video Generation Parameters
+                    </summary>
+                    <div class="video-params-section" style="padding: 15px; background: #fff;">
+                        <div class="options-row">
+                            <div class="option-group">
+                                <label for="durationSeconds">Duration Seconds:</label>
+                                <select id="durationSeconds">
+                                    <option value="" selected>Not Set</option>
+                                    <option value="4">4</option>
+                                    <option value="6">6</option>
+                                    <option value="8">8</option>
+                                </select>
+                            </div>
+                            <div class="option-group">
+                                <label for="aspectRatio">Aspect Ratio:</label>
+                                <select id="aspectRatio">
+                                    <option value="" selected>Not Set</option>
+                                    <option value="16:9">16:9 (Landscape)</option>
+                                    <option value="9:16">9:16 (Portrait)</option>
+                                </select>
+                            </div>
+                            <div class="option-group">
+                                <label for="resolution">Resolution:</label>
+                                <select id="resolution">
+                                    <option value="" selected>Not Set</option>
+                                    <option value="720p">720p</option>
+                                    <option value="1080p">1080p</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="options-row">
+                            <div class="option-group">
+                                <label for="sampleCount">Sample Count (1-4):</label>
+                                <input type="number" id="sampleCount" placeholder="Not Set" min="1" max="4">
+                            </div>
+                            <div class="option-group">
+                                <label for="seed">Seed (0-4294967295):</label>
+                                <input type="number" id="seed" placeholder="Random" min="0" max="4294967295">
+                            </div>
+                            <div class="option-group">
+                                <label for="personGeneration">Person Generation:</label>
+                                <select id="personGeneration">
+                                    <option value="" selected>Not Set</option>
+                                    <option value="allow_adult">allow_adult</option>
+                                    <option value="disallow">disallow</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="options-row">
+                            <div class="option-group full-width">
+                                <label for="negativePrompt">Negative Prompt:</label>
+                                <textarea id="negativePrompt" rows="2" placeholder="Describe things you don't want (e.g., 'blurry, distorted')."></textarea>
+                            </div>
+                        </div>
+                    </div>
+                </details>
+
                 <!-- Collapsible Image Generation Session -->
                 <details style="margin: 20px 0; border: 1px solid #ccc; border-radius: 8px; overflow: hidden;">
                     <summary style="cursor: pointer; padding: 15px; background-color: #f8f9fa; font-weight: bold; user-select: none;">
