feat: Add generateAudio parameter to video generation

--- a/gemini/video/generation/index.html
+++ b/gemini/video/generation/index.html
@@ -105,6 +105,15 @@
                             </div>
                         </div>
                         <div class="options-row">
+                            <div class="option-group">
+                                <label for="generateAudio">Generate Audio:</label>
+                                <select id="generateAudio">
+                                    <option value="" selected>Not Set</option>
+                                    <option value="false">false</option>
+                                    <option value="true">true</option>
+                                </select>
+                            </div>
+                        <div class="options-row">
                             <div class="option-group full-width">
                                 <label for="negativePrompt">Negative Prompt:</label>
                                 <textarea id="negativePrompt" rows="2" placeholder="Describe things you don't want (e.g., 'blurry, distorted')."></textarea>
