fix: Minor HTML formatting adjustment in video generation page

--- a/gemini/video/generation/index.html
+++ b/gemini/video/generation/index.html
@@ -110,6 +110,7 @@
                                     <option value="true">true</option>
                                 </select>
                             </div>
+                        </div>
                         <div class="options-row">
                             <div class="option-group full-width">
                                 <label for="negativePrompt">Negative Prompt:</label>
