feat: Add gemini-3-flash-preview model and pricing

--- a/gemini/ai-story/index.html
+++ b/gemini/ai-story/index.html
@@ -50,6 +50,7 @@
                 <option value="gemini-2.5-flash">gemini-2.5-flash</option>
                 <option value="gemini-2.5-pro">gemini-2.5-pro</option>
                 <option value="gemini-3-pro-preview">gemini-3-pro-preview</option>
+                <option value="gemini-3-flash-preview">gemini-3-flash-preview</option>
             </select>
         </div>
 
