--- a/gemini/chatbot/index.html
+++ b/gemini/chatbot/index.html
@@ -76,6 +76,7 @@
             <label for="geminiModel">Select Model:</label>
             <select id="geminiModel">
                 <option value="gemini-3-pro-preview">gemini-3-pro-preview</option>
+                <option value="gemini-3-flash-preview">gemini-3-flash-preview</option>
                 <option value="gemini-2.5-pro">gemini-2.5-pro</option>
                 <option value="gemini-2.5-flash" selected>gemini-2.5-flash</option>
                 <option value="gemini-2.5-flash-lite">gemini-2.5-flash-lite</option>
