feat: Add Novel Abstract Generator with batch API support

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
         <p>
             <button onclick="window.location.href='gemini/video/generation/index.html'">Video Generator</button>
         </p>
+        <p>
+            <button onclick="window.location.href='gemini/novel/index.html'">Novel Abstract Generator</button>
+        </p>
     </div>
 </body>
 </html>
