--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <button onclick="window.location.href='gemini/video/generation/index.html'">Video Generator</button>
         </p>
         <p>
-            <button onclick="window.location.href='gemini/novel/index.html'">Novel Abstract Generator</button>
+            <button onclick="window.location.href='gemini/novel/index.html'">Novel Generator</button>
         </p>
     </div>
 </body>
