feat: add comprehensive resolution and token options for Gemini image models

--- a/gemini/image/index.html
+++ b/gemini/image/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gemini Text to Image Generator</title>
+    <title>Gemini Image Generator</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>Gemini Text to Image Generator</h1>
+        <h1>Gemini Image Generator</h1>
         <p id="explanationNote" class="explanation-note"></p>
 
         <div class="input-section">
@@ -32,11 +32,7 @@
                 <div class="option-group">
                     <label for="aspectRatioSelect">Aspect Ratio:</label>
                     <select id="aspectRatioSelect">
-                        <option value="1:1">1:1 (Square)</option>
-                        <option value="16:9">16:9 (Landscape)</option>
-                        <option value="9:16">9:16 (Portrait)</option>
-                        <option value="4:3">4:3</option>
-                        <option value="3:4">3:4</option>
+                        <!-- Dynamically populated -->
                     </select>
                 </div>
 
