--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <button onclick="window.location.href='gemini/chatbot/multi_party_chat/index.html'">Multi-Party Chatbot</button>
         </p>
         <p>
-            <button onclick="window.location.href='gemini/image/index.html'">Text to Image Generator</button>
+            <button onclick="window.location.href='gemini/image/index.html'">Image Generator</button>
         </p>
         <p>
             <button onclick="window.location.href='gemini/video/analyzer/index.html'">Video Analyzer</button>
