feat: add aspectRatio and durationSeconds options for video generation

--- a/gemini/video/generation/index.html
+++ b/gemini/video/generation/index.html
@@ -60,16 +60,18 @@
                             <div class="option-group">
                                 <label for="durationSeconds">Duration Seconds:</label>
                                 <select id="durationSeconds">
-                                    <option value="" selected>Not Set</option>
+                                    <option value="" selected>Not Set (Default: 8)</option>
                                     <option value="4">4</option>
+                                    <option value="5">5</option>
                                     <option value="6">6</option>
+                                    <option value="7">7</option>
                                     <option value="8">8</option>
                                 </select>
                             </div>
                             <div class="option-group">
                                 <label for="aspectRatio">Aspect Ratio:</label>
                                 <select id="aspectRatio">
-                                    <option value="" selected>Not Set</option>
+                                    <option value="" selected>Not Set (Default: 16:9)</option>
                                     <option value="16:9">16:9 (Landscape)</option>
                                     <option value="9:16">9:16 (Portrait)</option>
                                 </select>
