feat: add multimodal vision page supporting multiple image and text inputs

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
             <button onclick="window.location.href='gemini/video/generation/index.html'">Video Generator</button>
         </p>
         <p>
+            <button onclick="window.location.href='gemini/multimodal/index.html'">Multimodal Vision (Image + Text)</button>
+        </p>
+        <p>
             <button onclick="window.location.href='gemini/novel/index.html'">Novel Generator</button>
         </p>
     </div>
