feat: implement AI RPG Game with session history and inventory tracking

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
         <p>
             <button onclick="window.location.href='gemini/novel/index.html'">Novel Generator</button>
         </p>
+        <p>
+            <button onclick="window.location.href='gemini/rpg/index.html'">AI RPG Game</button>
+        </p>
     </div>
 </body>
 </html>
